--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Hux Blog
-SEOTitle: 黄玄的博客 | Hux Blog
+title: XiangXiao Blog
+SEOTitle: 向逍的博客 | XiangXiao Blog
 header-img: img/home-bg.jpg
-email: huxpro@gmail.com
+email: 2311711863@qq.com
 description: "这里是 @Hux黄玄 的个人博客，与你一起发现更大的世界 | 要做一个有 swag 的程序员"
-keyword: "黄玄, Hux黄玄, Hux, 鬼栈, huxpro, @huxpro, 黄玄的博客, Hux Blog, 博客, 个人网站, 互联网, Web, JavaScript, React, React Native, 前端, 设计"
+keyword: "博客, BLOG, share, 学习"
 url: "https://huangxuan.me" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
@@ -13,10 +13,10 @@ future: true
 
 # SNS settings
 RSS: false
-weibo_username: huxpro
-zhihu_username: huxpro
-github_username: huxpro
-twitter_username: huxpro
+weibo_username: xiangxiao
+zhihu_username: xiangxiao
+github_username: xiangxiao
+twitter_username: xiangxiao
 #facebook_username:  huxpro
 #linkedin_username:  firstname-lastname-idxxxx
 
