--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ title: XiangXiao Blog
 SEOTitle: 向逍的博客 | XiangXiao Blog
 header-img: img/home-bg.jpg
 email: 2311711863@qq.com
-description: "这里是 @Hux黄玄 的个人博客，与你一起发现更大的世界 | 要做一个有 swag 的程序员"
+description: "这里是 @Xiangxiao向逍 的个人博客"
 keyword: "博客, BLOG, share, 学习"
-url: "https://huangxuan.me" # your host, for absolute URL
+url: "https://xiangxiao.me" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
@@ -70,7 +70,7 @@ netease_comment: false
 
 # Google Analytics
 ga_track_id: "UA-49627206-1" # Format: UA-xxxxxx-xx
-ga_domain: huangxuan.me
+ga_domain: xiangxiao.me
 
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
@@ -91,12 +91,12 @@ page-mathjax: false
 # Friends
 friends:
   [
-    { title: "乱序（Midare）", href: "http://mida.re/" },
-    { title: "Ebn Zhang", href: "https://ebnbin.dev/" },
-    { title: "Kun Qian", href: "http://kunq.me" },
-    { title: "Sherry Woo", href: "https://sherrywoo.me/" },
-    { title: "SmdCn", href: "http://blog.smdcn.net" },
-    { title: "JiyinYiyong", href: "http://tiye.me/" },
-    { title: "DHong Say", href: "http://dhong.co" },
-    { title: "尹峰以为", href: "http://ingf.github.io/" },
+#    { title: "乱序（Midare）", href: "http://mida.re/" },
+#    { title: "Ebn Zhang", href: "https://ebnbin.dev/" },
+#    { title: "Kun Qian", href: "http://kunq.me" },
+#    { title: "Sherry Woo", href: "https://sherrywoo.me/" },
+#    { title: "SmdCn", href: "http://blog.smdcn.net" },
+#    { title: "JiyinYiyong", href: "http://tiye.me/" },
+#    { title: "DHong Say", href: "http://dhong.co" },
+#    { title: "尹峰以为", href: "http://ingf.github.io/" },
   ]
