modify index page's bg picture

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: XiangXiao Blog
 SEOTitle: 向逍的博客 | XiangXiao Blog
-header-img: img/home-bg.jpg
+header-img: img/bg-walle.jpg
 email: 2311711863@qq.com
 description: "这里是 @Xiangxiao向逍 的个人博客"
 keyword: "博客, BLOG, share, 学习"
